--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ The country’s safari industry highlights <b>Masai Mara lodge</b>  and takes ad
                     <p>swimming pool</p>
                   </div>
                   <div class="col-md-4">
-                    <img src="people.jpg" class="d-block w-100" alt="Gallery Image 5">
+                    <img src="people1.jpg" class="d-block w-100" alt="Gallery Image 5">
                     <p>outlook</p>
                   </div>
                   <div class="col-md-4">
